--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==18.2.0
 Click==7.0
 colorama==0.4.0
 Flask==1.0.2
+Flask-JWT-Extended==3.13.1
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -12,7 +13,9 @@ MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==4.3.0
 pluggy==0.8.0
+psycopg2==2.7.6.1
 py==1.7.0
+PyJWT==1.6.4
 pylint==2.1.1
 pytest==4.0.0
 six==1.11.0
